add layout in invest

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,7 +2,9 @@
 <style>
 </style>
 {% endblock %} {% block body %}
-功能持续更新上线中，敬请期待！
+<div style="text-align:center;">
+	功能持续更新上线中，敬请期待！
+</div>
 <script>
 $(document).ready(function() {
 	$('.menu-wrap a').removeClass('active');
