--- a/templates/invest.html
+++ b/templates/invest.html
@@ -305,29 +305,35 @@
     background-color: #2c2f3c;
     margin-bottom: 30px;
 }
+
 #plot5 .intro {
     text-align: center;
     padding: 60px;
     max-width: 300px;
     margin: 0 auto;
 }
+
 #plot5 .intro .fa {
     font-size: 50px;
     margin-bottom: 20px;
 }
+
 #plot5 .intro h4 {
     font-weight: normal;
     font-size: 20px;
     margin-bottom: 16px;
 }
+
 #plot5 .intro p {
     color: #999;
 }
+
 #plot5 .intro span {
     color: #fff;
     margin-left: 5px;
     margin-right: 5px;
 }
+
 #plot6 {
     width: 100%;
     height: 300px;
@@ -335,29 +341,55 @@
     margin-bottom: 30px;
 }
 
-#plot7, #plot8 {
+#plot7,
+#plot8 {
     width: 100%;
     height: 350px;
     background-color: #2c2f3c !important;
     margin-bottom: 30px;
 }
-#plot9 {
+
+#plot9,
+#plot10 {
     width: 100%;
     height: 400px;
     background-color: #2c2f3c !important;
     margin-bottom: 30px;
 }
-#plot10 {
-    width: 100%;
-    height: 300px;
-    background-color: #2c2f3c !important;
-    margin-bottom: 30px;
-}
+
 #plot11 {
     width: 100%;
     height: 300px;
     background-color: #2c2f3c !important;
     margin-bottom: 30px;
+}
+
+#plot12 {
+    width: 100%;
+    height: 300px;
+    background-color: #2c2f3c !important;
+    margin-bottom: 30px;
+}
+#plot10 {
+    padding: 30px 35px;
+    position: relative;
+    overflow-y: scroll;
+}
+#plot10 h4 {
+    font-weight: normal;
+    font-size: 15px;
+    margin-top: 0;
+    color: #eee;
+    border-left: 5px solid #535d63;
+    padding-left: 10px;
+}
+#plot10 .listing {
+    margin-bottom: 27px;
+}
+#plot10 h4 span {
+    color: #999;
+    font-size: 12px;
+    margin-left: 15px;
 }
 </style>
 {% endblock %} {% block body %}
@@ -719,21 +751,26 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="plot-title">历史成功投标记录</div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="plot-title">历史成功自动投标统计</div>
         <div id="plot9"></div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+        <div class="plot-title">历史成功自动投标详情</div>
+        <div id="plot10">
+        </div>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="plot-title">投标策略和模型数据统计</div>
-        <div id="plot10"></div>
+        <div id="plot11"></div>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="plot-title">你可能感兴趣的标的</div>
-        <div id="plot11"></div>
+        <div id="plot12"></div>
     </div>
 </div>
 <div style="text-align:center;">功能持续更新上线中，敬请期待！</div>
@@ -1020,6 +1057,149 @@ $(document).ready(function() {
     $('#show_info_close').click(function(event) {
         $('#show_info').fadeOut();
     });
+
+    var plot9 = echarts.init(document.getElementById('plot9'), 'dark');
+    var param9 = ['投资标数', 'count'];
+    var option9 = {
+        tooltip: {
+            trigger: 'item',
+            formatter: function (params) {
+                return params['data'][0] + '<br/>投资标数：<span style="color:rgba(221, 107, 102, 0.9);margin-right:3px;">' + params['data'][1] + '</span>个<br/>投资金额：<span style="color:rgba(221, 107, 102, 0.9);margin-right:3px;">' + params['data'][2] + '</span>元';
+            }
+        },
+        calendar: [{
+            top: 40,
+            left: 50,
+            right: 30,
+            bottom: 210, 
+            range: ['2017-01-01', '2017-06-30'],
+            yearLabel: {
+                show: false
+            },
+            dayLabel: {
+                textStyle: {
+                    color: '#bbb'
+                }
+            },
+            monthLabel: {
+                margin: 8,
+                textStyle: {
+                    color: '#bbb'
+                }
+            },
+            splitLine: {
+                show: true,
+                lineStyle: {
+                    color: '#000',
+                    width: 2,
+                    type: 'solid'
+                }
+            },
+            itemStyle: {
+                normal: {
+                    color: '#323c48',
+                    borderWidth: 1,
+                    borderColor: '#111'
+                }
+            }
+        }, {
+            top: 225,
+            left: 50,
+            right: 30,
+            bottom: 25,
+            range: ['2017-07-01', '2017-12-31'],
+            yearLabel: {
+                show: false
+            },
+            dayLabel: {
+                textStyle: {
+                    color: '#bbb'
+                }
+            },
+            monthLabel: {
+                margin: 8,
+                textStyle: {
+                    color: '#bbb'
+                }
+            },
+            splitLine: {
+                show: true,
+                lineStyle: {
+                    color: '#000',
+                    width: 2,
+                    type: 'solid'
+                }
+            },
+            itemStyle: {
+                normal: {
+                    color: '#323c48',
+                    borderWidth: 1,
+                    borderColor: '#111'
+                }
+            }
+        }],
+        series: [{
+            name: '自动投标',
+            type: 'scatter',
+            coordinateSystem: 'calendar',
+            data: datasetJson['calendar']['count'],
+            symbolSize: function(val) {
+                if (datasetJson['calendar']['max_count'] == 0) {
+                    return 0;
+                }
+                else {
+                    return 15 * val[1] / datasetJson['calendar']['max_count'];
+                }
+            },
+            itemStyle: {
+                normal: {
+                    color: '#ddb926'
+                }
+            }
+        }, {
+            name: '自动投标',
+            type: 'scatter',
+            coordinateSystem: 'calendar',
+            calendarIndex: 1,
+            data: datasetJson['calendar']['count'],
+            symbolSize: function(val) {
+                if (datasetJson['calendar']['max_count'] == 0) {
+                    return 0;
+                }
+                else {
+                    return 15 * val[1] / datasetJson['calendar']['max_count'];
+                }
+            },
+            itemStyle: {
+                normal: {
+                    color: '#ddb926'
+                }
+            }
+        }]
+    };
+    plot9.setOption(option9);
+
+    var page10 = 0;
+    for (var i = page10 * 5; i < (page10 + 1) * 5; i++) {
+        if (i >= datasetJson['biddings'].length) {
+            break;
+        }
+        var tmp = $('<div class="listing"></div>');
+        var list = datasetJson['biddings'][i];
+        tmp.append('<h4>' + list['Title'] + '<span>' + list['ListingId'] + '</span><span>' + list['timestamp'] +'</span></h4>');
+        var tcor = {
+            'AAA': 0,
+            'AA': 0,
+            'A': 0,
+            'B': 0,
+            'C': 0,
+            'D': 0,
+            'E': 0,
+            'F': 0,
+        }
+        tmp.append('<p><span style="color:' + colorset[tcor[list['CreditCode']]] + ';margin-right:20px;">' + list['CreditCode'] + '</span><span style="margin-right:20px;color:#999;">' + list['CurrentRate'] + '%</span><span style="color:#999;margin-right:20px;">' + list['Months'] + '个月</span><span style="margin-right:20px;color:rgba(109, 188, 191, 0.9);">' + list['strategy'] + '</span>已投 <span style="color:rgba(117, 179, 117, 0.9);">' + list['amount'] + '</span> 元</p>')
+        $('#plot10').append(tmp);
+    }
 });
 </script>
 {% endblock %}
