--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
     <link href="{{url_for('static',filename='fa/css/font-awesome.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static',filename='css/magic.min.css')}}" rel="stylesheet">
     <script src="{{url_for('static',filename='js/d3.min.js')}}"></script>
-    <script src="{{url_for('static',filename='js/echarts.min.js')}}"></script>
+    <script src="{{url_for('static',filename='js/echarts.js')}}"></script>
     <script src="{{url_for('static',filename='js/dark.js')}}"></script>
     <!--script src="{{url_for('static',filename='js/countUp.js')}}"></script-->
     <!--script src="{{url_for('static',filename='js/echarts2/echarts.js')}}"></script-->
