--- a/templates/invest.html
+++ b/templates/invest.html
@@ -386,6 +386,9 @@
 #plot10 .listing {
     margin-bottom: 27px;
 }
+#plot10 .listing:last-child {
+    margin-bottom: 0;
+}
 #plot10 h4 span {
     color: #999;
     font-size: 12px;
