--- a/templates/user_wait.html
+++ b/templates/user_wait.html
@@ -110,6 +110,8 @@
         <div class="dot1"></div>
         <div class="dot2"></div>
     </div>
+    <p>拍拍贷开放平台对API调用频率和次数存在限制</p>
+    <p>如果您的历史投资记录较多，生成个人中心页面可能需要更多时间</p>
     <p>您也可以先浏览一下</p>
     <p>基于比赛数据<a href="https://www.kesci.com/apps/home/#!/lab/dataset/58e893c49957300141f973dd/document" target="_blank">LCIS</a>生成的个人中心<a href="{{url_for('example')}}" target="_blank">示例</a></p>
 </div>
@@ -118,17 +120,17 @@ $(document).ready(function() {
     $('.menu-wrap a').removeClass('active');
     $('#nav2').addClass('active');
 
-    $.ajax({
-            url: '{{url_for("user_ready")}}',
-            type: 'POST',
-            dataType: 'json',
-            data: {},
-        })
-        .done(function(data) {
-            window.location.reload();
-        })
-        .fail(function() {})
-        .always(function() {});
+    // $.ajax({
+    //         url: '{{url_for("user_ready")}}',
+    //         type: 'POST',
+    //         dataType: 'json',
+    //         data: {},
+    //     })
+    //     .done(function(data) {
+    //         window.location.reload();
+    //     })
+    //     .fail(function() {})
+    //     .always(function() {});
 
 });
 </script>
