fix bug in history_user

--- a/templates/invest.html
+++ b/templates/invest.html
@@ -311,6 +311,7 @@
     padding: 60px;
     max-width: 300px;
     margin: 0 auto;
+    padding-bottom: 40px;
 }
 
 #plot5 .intro .fa {
@@ -736,6 +737,7 @@
             </div>
         </div>
     </div>
+    <p style="text-align:center;padding-bottom:60px;font-size:20px;color:#999;">与其费心设计<span style="color:#fff;margin-left:6px;margin-right:6px;">策略</span>&nbsp;&nbsp;&nbsp;不如交由<span style="color:#fff;margin-left:6px;margin-right:6px;">机器</span>自动选择</p>
 </div>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="position:relative;" id="p6">
