hide unfinished plots

--- a/templates/invest.html
+++ b/templates/invest.html
@@ -737,7 +737,7 @@
         </div>
     </div>
     <p style="text-align:center;padding-bottom:60px;font-size:20px;color:#999;">与其费心设计<span style="color:#fff;margin-left:6px;margin-right:6px;">策略</span>&nbsp;&nbsp;&nbsp;不如交由<span style="color:#fff;margin-left:6px;margin-right:6px;">机器</span>自动选择</p>
-    <button id="mlbid" class="active">开始自动投标</button>
+    <!-- <button id="mlbid" class="active">开始自动投标</button> -->
 </div>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="position:relative;" id="p6">
@@ -1121,7 +1121,7 @@ $(document).ready(function() {
             data: [0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.9, 0.8]
         }]
     };
-    plot6.setOption(option6);
+    // plot6.setOption(option6);
 
     var plot7 = echarts.init(document.getElementById('plot7'), 'dark');
     var option7 = {
@@ -1200,7 +1200,7 @@ $(document).ready(function() {
             data: [9,8,7,6,5,4,3,2,1]
         }]
     };
-    plot7.setOption(option7);
+    // plot7.setOption(option7);
 
     var plot8 = echarts.init(document.getElementById('plot8'), 'dark');
     var option8 = {
@@ -1279,7 +1279,7 @@ $(document).ready(function() {
             data: [9,8,7,6,5,4,3,2,1]
         }]
     };
-    plot8.setOption(option8);
+    // plot8.setOption(option8);
 
     var plot9 = echarts.init(document.getElementById('plot9'), 'dark');
     var param9 = ['投资标数', 'count'];
