--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
         -webkit-font-smoothing: antialiased;
         background-color: #373a47;
         color: #fff;
-        background-image: url("{{url_for('static', filename='img/bg.png')}}");
+        background-image: url("{{url_for('static', filename='img/bg.jpg')}}");
         background-size: cover;
         padding: 140px 60px;
     }
@@ -56,7 +56,7 @@
         font-size: 24px;
         font-weight: lighter;
         color: #fff;
-        margin-bottom: 80px;
+        margin-bottom: 90px;
     }
     #nav_auth {
         font-size: 18px;
